[package]
name = "libdragon-sys"
include = [ "build.rs", "src/", "wrapper.h", "linker.ld", "toolchain/", "libdragon/" ]
links = "libdragon-sys"
build = "build.rs"
description = "Raw FFI bindings to libdragon"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "libdragon_sys"
path = "src/lib.rs"
test = false
bench = false
doc = true
crate-type = ["lib"]

[build-dependencies]
bindgen = { version = "0.72", features = ["experimental"] }
execute = "0.2"
filetime = "0.2"
reqwest = "0.12"
tokio = { version = "1.47", features = ["full"] }
tempfile = "3.22"
zip = "5.1"
doxygen-rs = "0.4"


[features]
default = []
buildtoolchain = []
