[package]
name = "libdragon-sys"
include = [ "build.rs", "src/", "wrapper.h", "linker.ld", "toolchain/", "libdragon/" ]
links = "libdragon-sys"
build = "build.rs"
description = "Raw FFI bindings to libdragon"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "libdragon_sys"
path = "src/lib.rs"
test = false
bench = false
doc = true
crate-type = ["lib"]

[build-dependencies]
cc = "1.2"
bindgen = { version = "0.72", features = ["experimental"] }
doxygen-rs = "0.4"

[features]
default = []
buildtoolchain = []
