[package]
name = "libdragon"
links = "libdragon"
build = "build.rs"
description = "Rust bindings for the LibDragon C library for N64 development"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libdragon-sys = { path = "../libdragon-sys" }
cstr_core = "0.2.6"

# Any version above "0.9" require the target OS to be known ("unix", "windows")
# Which is not possible on "no_std"
typed-path = { version = "0.9", default-features = false }
embedded-io = "0.6.1"
paste = "1.0"
function_name = "0.3"
bitflags = "2.9.4"

[features]
buildtoolchain = ["libdragon-sys/buildtoolchain"]
